Improved security configuration with role-based access control and enabled CSRF protection